# EmailBuddy

./: README.md  main.py  pyproject.toml
modules/: call_llm.py  make_mail.py  send_mail.py
